base/argo-cd/base/dex/argocd-dex-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: # kpt-merge: /argocd-dex-server-network-policy
  name: argocd-dex-server-network-policy
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|NetworkPolicy|default|argocd-dex-server-network-policy'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
    ports:
    - protocol: TCP
      port: 5556
    - protocol: TCP
      port: 5557
  - from:
    - namespaceSelector: {}
    ports:
    - port: 5558
      protocol: TCP
